fix broken css i hope?

--- a/Micah-Haycraft.css
+++ b/Micah-Haycraft.css
@@ -120,7 +120,7 @@
   font-weight: 700;
   text-transform: uppercase;
   animation-duration: 1000ms;
-  margin: 35px 113px 0 auto;
+  margin: -4px 116px 0 auto;
   padding: 10px 26px;
 }
 
@@ -135,7 +135,7 @@
   font-weight: 700;
   text-transform: uppercase;
   animation-duration: 1000ms;
-  margin: -62px auto 0 1px;
+  margin: -62px auto 0 0;
   padding: 10px 26px;
 }
 
@@ -171,7 +171,7 @@
   font-weight: 700;
   text-transform: uppercase;
   animation-duration: 1000ms;
-  margin: 35px auto 0 0;
+  margin: 20px auto 0 0;
   padding: 9px 10px;
 }
 
@@ -185,7 +185,7 @@
   font-weight: 700;
   text-transform: uppercase;
   animation-duration: 1000ms;
-  margin: -62px 113px 0 auto;
+  margin: -62px 115px 0 auto;
   padding: 10px 9px 10px 8px;
 }
 
@@ -224,11 +224,7 @@
   }
 
   .u-section-2 .u-btn-1 {
-    margin-right: 13px;
-  }
-
-  .u-section-2 .u-btn-2 {
-    margin-left: 0;
+    margin-right: 16px;
   }
 
   .u-section-2 .u-layout-cell-3 {
@@ -236,7 +232,7 @@
   }
 
   .u-section-2 .u-btn-4 {
-    margin-right: 13px;
+    margin-right: 15px;
   }
 
   .u-section-2 .u-layout-cell-4 {
